# TralalaContracts

./: .gitignore  AGENTS_AND_COMMANDS.md  ARQUITECTURA.md  BACKEND_SETUP.md  BLOCKLY-USAGE-GUIDE.md  CLAUDE.md  CONFIGURACION.md  CONFIGURACION_STEPPER.md  DEMO_STEPPER.md  DEPLOY-COMMANDS.md  DEPLOYMENT_FLOW_COMPLETE.md  Dockerfile  EJEMPLOS_CONTRATOS.md  GUIA_USUARIO.md  HACKATHON_DEPLOYMENT.md  HACKATHON_PLAN_V2.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTRUCCIONES_FINALES.md  PRECOMPILED_FIX.md  PROYECTO_COMPLETADO.md  QUICKSTART_BACKEND.md  QUICK_REFERENCE_SOROBAN_VERIFICATION.js  QUICK_START.md  README.md  RENDER-DEPLOY.md  SOLUCION-RENDER-ERROR.md  STELLAR_SDK_ANALYSIS_AND_PLAN.md  TEMPLATE-IMPROVEMENTS.md  TEMPLATES_INDEX.md  TEMPLATE_ARCHITECTURE.md  TEMPLATE_IMPROVEMENTS_V2.md  TEMPLATE_QUICK_REFERENCE.md  TESTING_GUIDE.md  check-setup.js  cleanup-for-git.sh  deployment-fix-best-practices.js  env.example  fallback-build.sh  package-lock.json  (+12 more)
.claude/: settings.local.json
.claude/commands/: contract-testing.md  index.md  security-checklist.md
.claude/skills/: testing-soroban-patterns.md
backend/: .gitignore  Cargo.toml  api.js  package.json
backend/compiled/: hello_world.wasm  metadata.json  token_advanced.wasm  token_basic.wasm
backend/contracts/counter/src/: lib.rs
backend/contracts/hello-world/src/: lib.rs
backend/contracts/token_template_advanced/: Cargo.toml
backend/contracts/token_template_advanced/src/: lib.rs
backend/contracts/token_template_basic/: Cargo.toml
backend/contracts/token_template_basic/src/: lib.rs
public/: blockly-templates.js  blocks-definitions.js  client.js  compilation-progress.js  contract-interface.html  contract-validator.js  grid-pattern.js  index.html  magic-ui-grid.js  project-manager.js  rust-generator.js  stepper-client.js  style.css  test-frontend.html  wallet-adapter.js
tralala/: Cargo.toml
tralala/compiled/: abb7e716-bc80-468e-bf3d-bcfbfc6e48e9.json
tralala/contracts/counter/src/: lib.rs
tralala/contracts/token-templates/: advanced_token.hbs  rwa_template.hbs  simple_token.hbs  simple_token_v2.hbs  stellar_token_contract.hbs  stellar_token_contract_v23.hbs
tralala/contracts/token_template_advanced/: Cargo.toml
tralala/contracts/token_template_basic/: Cargo.toml
tralala/contracts/token_template_basic/src/: lib.rs
tralala/contracts/token_test_a53ee33e/: Cargo.toml
tralala/dynamic-contracts/mtk_advanced_2f27a3e7/: Cargo.toml
tralala/dynamic-contracts/mtk_advanced_8a62c62d/: Cargo.toml
tralala/dynamic-contracts/mtk_advanced_a7079dbe/: Cargo.toml
tralala/dynamic-contracts/mtk_advanced_e2d39b2c/: Cargo.toml
tralala/dynamic-contracts/mtk_advanced_e9ea30a3/: Cargo.toml
tralala/dynamic-contracts/test_advanced_3bbd1c2d/: Cargo.toml
tralala/dynamic-contracts/tkn_advanced_2c2e6f1c/: Cargo.toml
tralala/dynamic-contracts/tkn_advanced_4b99285c/: Cargo.toml
tralala/dynamic-contracts/tkn_advanced_bdd7eca5/: Cargo.toml
tralala/dynamic-contracts/token_advanced_0f3892a1/: Cargo.toml
tralala/dynamic-contracts/token_advanced_3498beda/: Cargo.toml
tralala/dynamic-contracts/token_advanced_77096bb7/: Cargo.toml
tralala/dynamic-contracts/token_advanced_92b72614/: Cargo.toml
tralala/dynamic-contracts/token_advanced_a228690d/: Cargo.toml
tralala/dynamic-contracts/token_advanced_b39aa02c/: Cargo.toml
tralala/dynamic-contracts/token_advanced_c0ed530b/: Cargo.toml
tralala/dynamic-contracts/token_test_0b4ffc76/: Cargo.toml
tralala/dynamic-contracts/token_test_53787d0d/: Cargo.toml
tralala/dynamic-contracts/token_test_88cf6288/: Cargo.toml
tralala/dynamic-contracts/token_test_9e04ac4c/: Cargo.toml
tralala/dynamic-contracts/token_test_9e04ac4c/src/: lib.rs
(+37 files in other folders)
