[workspace]
resolver = "2"
members = [
    "contracts/hello-world",
    "contracts/counter",
    "contracts/token_template_basic",
    "contracts/token_template_advanced",
    "dynamic-contracts/mtk_*"
]

[workspace.dependencies]
soroban-sdk = "23.0.1"

[profile.release]
opt-level = 2
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 256
lto = "thin"

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
