[package]
name = "token_template_basic"
version = "1.0.0"
edition = "2021"
authors = ["Tralalero"]
description = "Basic token contract template compiled to WASM"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
