[package]
name = "token_test_0b4ffc76"
version = "1.0.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = "23.0.1"

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "token_test_0b4ffc76"
path = "src/lib.rs"

